--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -40,7 +40,7 @@
     </main>
 
     <footer class="py-5">
-      <p>Build by PengiunTech</p>
+      <p>Build by PenguinTech</p>
     </footer>
 
   </div>
